--- a/dashboard.html
+++ b/dashboard.html
@@ -58,7 +58,9 @@
 
             <main class="main-content">
                 <header class="topbar">
-                    <div class="profile">👤 Profile</div>
+                    <a href="profile.html">
+                        <div class="profile">👤 Profile</div>
+                    </a>
                     <button id="theme-toggle">Toggle Theme</button>
                 </header>
                 
