--- a/profile.html
+++ b/profile.html
@@ -40,7 +40,7 @@
             <div class="profile-actions">
                 <button class="btn follow-btn">Follow</button>
                 <button class="btn message-btn">Message</button>
-                <button class="btn edit-profile-btn">Edit Profile</button>
+                <button class="btn edit-profile-btn"><a href="edit-profile.html"> Edit Profile</a></button>
             </div>
         </div>
 
